WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172309
Redundant ellipsis box triggers ASSERT_WITH_SECURITY_IMPLICATION in InlineBox::parent().
https://bugs.webkit.org/show_bug.cgi?id=172309
Summary
Redundant ellipsis box triggers ASSERT_WITH_SECURITY_IMPLICATION in InlineBox...
alan
Reported
2017-05-18 14:09:19 PDT
but in this case, it is not a security issue at all -not even an issue.
rdar://problem/32262357
Attachments
Patch
(7.76 KB, patch)
2017-05-18 16:18 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.77 KB, patch)
2017-05-18 16:57 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.80 KB, patch)
2017-05-19 08:04 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.88 KB, patch)
2017-05-19 15:13 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-05-18 16:18:51 PDT
Created
attachment 310571
[details]
Patch
Simon Fraser (smfr)
Comment 2
2017-05-18 16:54:36 PDT
Comment on
attachment 310571
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=310571&action=review
> Source/WebCore/rendering/InlineBox.h:416 > + bool m_inChildList { true };
Maybe call this m_isEverInChildList, or even m_isEllipsisBox.
alan
Comment 3
2017-05-18 16:57:44 PDT
Created
attachment 310576
[details]
Patch
WebKit Commit Bot
Comment 4
2017-05-18 17:37:47 PDT
Comment on
attachment 310576
[details]
Patch Clearing flags on attachment: 310576 Committed
r217079
: <
http://trac.webkit.org/changeset/217079
>
WebKit Commit Bot
Comment 5
2017-05-18 17:37:48 PDT
All reviewed patches have been landed. Closing bug.
Ryan Haddad
Comment 6
2017-05-18 20:23:34 PDT
(In reply to WebKit Commit Bot from
comment #4
)
> Comment on
attachment 310576
[details]
> Patch > > Clearing flags on attachment: 310576 > > Committed
r217079
: <
http://trac.webkit.org/changeset/217079
>
This change broke the Windows debug build, as well as some internal builds:
https://build.webkit.org/builders/Apple%20Win%20Debug%20(Build)/builds/1419
Ryan Haddad
Comment 7
2017-05-18 20:28:12 PDT
Reverted
r217079
for reason: This change broke internal builds. Committed
r217092
: <
http://trac.webkit.org/changeset/217092
>
alan
Comment 8
2017-05-19 08:04:37 PDT
Created
attachment 310656
[details]
Patch
alan
Comment 9
2017-05-19 15:13:46 PDT
Created
attachment 310707
[details]
Patch
WebKit Commit Bot
Comment 10
2017-05-19 15:54:10 PDT
Comment on
attachment 310707
[details]
Patch Clearing flags on attachment: 310707 Committed
r217164
: <
http://trac.webkit.org/changeset/217164
>
WebKit Commit Bot
Comment 11
2017-05-19 15:54:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug