Source/WebCore/rendering/InlineBox.cpp
@@ -43,6 +43,7 @@ struct SameSizeAsInlineBox {
 #if !ASSERT_WITH_SECURITY_IMPLICATION_DISABLED
     unsigned s;
     bool f;
+    bool i;
 #endif
 };
 
@@ -70,7 +71,7 @@ void InlineBox::setHasBadParent()
 void InlineBox::invalidateParentChildList()
 {
     assertNotDeleted();
-    if (!m_hasBadParent && m_parent)
+    if (!m_hasBadParent && m_parent && m_isEverInChildList)
         m_parent->setHasBadChildList();
 }
 
